frontend/test/should_fail/index_exec_node_fromIndexFromTo_argument2_mismatch.grg
#using "index_exec_model.gm"

sequence s(j:double)
{
	{ i:set<Node>=nodesFromIndexFromExclusiveToExclusive(fooi, 42, j) }
}
